Criado a documentação via openAPI 3.1 e Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.datasource.password=admin
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 #spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+
+#Springdoc OpenApi 3.1 & Swagger 3
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packages-to-scan= com.larakaki.demo_park_api.controller
